[gd_scene load_steps=9 format=3 uid="uid://dbrxmwvsyvpdc"]

[ext_resource type="Texture2D" uid="uid://dhtcjas8r6w4" path="res://Art/Assets/indoor/making_table.png" id="1_5pi2g"]
[ext_resource type="Script" path="res://objects/resources/machines/interaction_area.gd" id="2_56ag1"]
[ext_resource type="Resource" uid="uid://78hxtu2xkf4q" path="res://data/player_1_data.tres" id="3_gp5e7"]
[ext_resource type="PackedScene" uid="uid://b8cq55re7qw88" path="res://objects/canvas/making_table_ui.tscn" id="4_k0h42"]
[ext_resource type="Script" path="res://objects/resources/machines/Machine_storage.gd" id="5_ogfhi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dxfyq"]
size = Vector2(36, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_obf0a"]
radius = 22.0227

[sub_resource type="LabelSettings" id="LabelSettings_68uuh"]
font_size = 3
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="making_table" type="StaticBody2D"]
position = Vector2(338, 123)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_5pi2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_dxfyq")

[node name="interaction_area" type="Area2D" parent="." node_paths=PackedStringArray("table_storage")]
script = ExtResource("2_56ag1")
player_data = ExtResource("3_gp5e7")
table_storage = NodePath("Table_storage")

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_area"]
shape = SubResource("CircleShape2D_obf0a")

[node name="Label" type="Label" parent="interaction_area"]
offset_left = -10.0
offset_top = -19.0
offset_right = 18.0
offset_bottom = -11.0
text = "[E] to interact
[F] to add component"
label_settings = SubResource("LabelSettings_68uuh")

[node name="making_table_ui" parent="interaction_area" node_paths=PackedStringArray("table_storage") instance=ExtResource("4_k0h42")]
visible = false
table_storage = NodePath("../Table_storage")
player_data = ExtResource("3_gp5e7")

[node name="Table_storage" type="Node" parent="interaction_area"]
script = ExtResource("5_ogfhi")

[connection signal="area_entered" from="interaction_area" to="interaction_area" method="_on_area_entered"]
[connection signal="area_exited" from="interaction_area" to="interaction_area" method="_on_area_exited"]
